# casper-staking-contract

./: .gitignore
contract/: Cargo.toml
contract/src/: data.rs  error.rs  lib.rs  staking.rs
contract/src/interfaces/: ierc20.rs  mod.rs
utils/test-env/src/: test_env.rs
