[package]
name = "contract"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
contract-utils = { path = "../utils/contract-utils"}
casper_types_derive = "0.1.0"
[[bin]]
name = "staking_contract"
path = "bin/staking_contract.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

